--- a/style.css
+++ b/style.css
@@ -7,16 +7,17 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     font-size: 42px;
-    color: rgb(55, 63, 66);
+    color: rgb(255, 255, 255);
 }
 #container{
     position: absolute;
     margin-left: 450px;
-    margin-top: 70px;
+    margin-top: 45px;
     width: 650px;
     height: 450px;
     background-color: rgb(248, 246, 246);
     padding: 20px;
+    border-radius: 20px;
 
 }
 h2{
@@ -25,24 +26,52 @@ h2{
 }
 h4{
     text-align: center; 
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 #numInput{
     text-align: center;
-    margin-left: 250px;
+    margin-left: 225px;
     height: 40px;
+    font-size: 16px;
 }
 #submitBtn{
-    padding: 10px;
-    margin-left: 300px;
+    padding: 10px 15px;
+    margin-left: 280px;
     font-weight: bold;
     background-color: rgb(77, 180, 214);
+    color: white;
     border: none;
     border-radius: 10px;
+    font-size: 18px;
+    cursor: pointer;
 
 }
+
+
 #h3txt{
     text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 #h3txt2{
     text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+#newGameIcon{
+    position: absolute;
+    margin-top: 70px;
+    margin-left: 1180px;
+    color: white;
+    background-color:  rgb(143, 208, 230);
+    font-size: 12px;
+    padding: 10px 15px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
+    
+}
+
+#submitBtn:hover ,#newGameIcon:hover{
+     color: black;
+     font-weight: bold;
 }
